<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Clock</string>
    <string name="default_label">Alarm</string>
    <string name="schedule_alarm_title">Schedule alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_flash">Flash</string>
    <string name="delete_occasional_alarm_after_use_title">Delete alarm once dismissed</string>
    <string name="time_picker_dialog_title">Select time</string>
    <string name="delay_picker_dialog_title">Alarm in…</string>
    <string name="date_picker_dialog_title">Select Date</string>
    <string name="alarm_label_box_title">Alarm label</string>
    <string name="label_default">Default</string>
    <string name="label_off">Off</string>
    <string name="label_never">Never</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="label_new_image">New image</string>
    <string name="warning">Warning</string>
    <string name="label_hours">Hours</string>
    <string name="label_minutes">Minutes</string>
    <string name="label_seconds">Seconds</string>
    <string name="confirm_action_prompt">\n\nDo you want to continue?</string>
    <string name="default_alarm_ringtone_title">Default alarm sound</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="timer_sound">Timer sound</string>
    <string name="add_new_sound">Add new</string>
    <string name="add_new_sound_subtitle">Long click to select a folder</string>
    <string name="remove_sound">Remove</string>
    <string name="selected">Selected</string>
    <string name="more_options">More options</string>
    <string name="confirm_remove_custom_ringtone">Alarms and timers using this sound will play the default sound instead.</string>
    <string name="progress_ringtones">Adding ringtones… (%1$d/%2$d)</string>
    <string name="your_sounds">Your sounds</string>
    <string name="device_sounds">Device sounds</string>
    <string name="custom_ringtone_lost_permissions">The sound content cannot be accessed.</string>
    <string name="default_timer_ringtone_title">Timer Expired</string>
    <string name="alarm_tomorrow">Tomorrow</string>
    <string name="alarm_today">Today</string>
    <string name="alarm_scheduled_for">Scheduled for %s</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_dismiss_and_delete_text">Dismiss &amp; Delete</string>
    <string name="alarm_missed_title">Missed alarm</string>
    <string name="alarm_missed_text"><xliff:g id="alarm_time">%1$s</xliff:g> - <xliff:g id="alarm_label">%2$s</xliff:g></string>
    <string name="alarm_alert_snoozed_text">Snoozed</string>
    <plurals name="alarm_alert_snooze_duration">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%d</xliff:g> min</item>
    </plurals>
    <string name="alarm_alert_off_text">Alarm off</string>
    <string name="alarm_alert_off_and_deleted_text">Alarm off and deleted</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <plurals name="alarm_alert_snooze_set">
        
        <item quantity="one">Snoozing for 1 minute.</item>
        
        <item quantity="other">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</item>
    </plurals>
    <string name="alarm_alert_snooze_until">Snoozing until <xliff:g id="time">%s</xliff:g></string>
    <string name="alarm_alert_predismiss_title">Upcoming alarm</string>
    <string name="occasional_alarm_alert_predismiss_title">Upcoming occasional alarm</string>
    <string name="missed_alarm_has_been_deleted">Your missed alarm has been deleted</string>
    <string name="timer_notifications_less_min">Less than a minute remaining</string>
    <string name="timer_notifications_hours"><xliff:g example="2 hours" id="HOURS">%1$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_notifications_minutes"><xliff:g example="2 minutes" id="MINUTES">%2$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_notifications_hours_minutes"><xliff:g example="2 hours" id="HOURS">%1$s</xliff:g><xliff:g example="2 minutes" id="MINUTES"> %2$s</xliff:g> remaining</string>
    <string name="timer_notifications_seconds"><xliff:g example="2 seconds" id="SECONDS">%4$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_notifications_minutes_seconds"><xliff:g example="2 minutes" id="MINUTES">%2$s</xliff:g> <xliff:g example="2 seconds" id="SECONDS"> %4$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_notifications_hours_seconds"><xliff:g example="2 hours" id="HOURS">%1$s</xliff:g> <xliff:g example="2 seconds" id="SECONDS"> %4$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_notifications_hours_minutes_seconds"><xliff:g example="2 hours" id="HOURS">%1$s</xliff:g><xliff:g example="2 minutes" id="MINUTES"> %2$s</xliff:g><xliff:g example="2 seconds" id="SECONDS"> %4$s</xliff:g><xliff:g example="remaining" id="REMAINING"> %3$s</xliff:g></string>
    <string name="timer_accessibility_custom_time_added">%1$s minute added to timer, <xliff:g example="5 hours remaining" id="TIME">%2$s</xliff:g></string>
    <string name="timer_remaining_single">remaining</string>
    <string name="timer_remaining_multiple">remaining</string>
    <string name="alarm_confirmation_toast_1">Alarm set for less than 1 minute from now.</string>
    <string name="alarm_confirmation_toast_2">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_3">Alarm set for <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_4">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_5">Alarm set for <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_6">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_7">Alarm set for <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_8">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g>, <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g>, and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <plurals name="days">
        
        <item quantity="one">1 day</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> days</item>
    </plurals>
    <plurals name="hours">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> hours</item>
    </plurals>
    <plurals name="hours_short">
        
        <item quantity="one">1 hr</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> hr</item>
    </plurals>
    <plurals name="minutes">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> minutes</item>
    </plurals>
    <plurals name="minutes_short">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> min</item>
    </plurals>
    <plurals name="seconds">
        
        <item quantity="one">1 second</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> seconds</item>
    </plurals>
    <string name="every_day">Every day</string>
    <string name="day_concat">", "</string>
    <string name="loading_widget">Loading\u2026</string>
    <string name="analog_widget">Analog clock</string>
    <string name="analog_widget_material_you">Analog clock Material You</string>
    <string name="digital_widget">Digital clock</string>
    <string name="vertical_digital_widget">Vertical digital clock</string>
    <string name="next_alarm_widget">Next alarm</string>
    <string name="material_you_digital_widget">Digital clock Material You</string>
    <string name="material_you_vertical_digital_widget">Vertical digital clock Material You</string>
    <string name="material_you_next_alarm_widget">Next alarm Material You</string>
    <string name="settings">Settings</string>
    <string name="settings_permission_message">One or more essential permissions are denied. Not granting them can lead to malfunctions.</string>
    <string name="settings_permission_summary">Click here to display the Permissions management page.</string>
    <string name="style_category_title">Style</string>
    <string name="colors_category_title">Colors</string>
    <string name="font_category_title">Font</string>
    <string name="miscellaneous_category_title">Miscellaneous</string>
    <string name="ringtone_category_title">Ringtone</string>
    <string name="actions_category_title">Actions</string>
    <string name="standard_category_title">Standard</string>
    <string name="material_you_category_title">Material You</string>
    <string name="interface_customization_settings">Interface</string>
    <string name="interface_customization_summary">Set style and color applied to the application</string>
    <string name="title_theme">Theme</string>
    <string name="system_theme">System</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="title_accent_color">Accent color</string>
    <string name="auto_night_accent_color_title">Apply accent color to night mode</string>
    <string name="day_accent_color_title">Accent color for day mode</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="sw_settings_summary">Set actions for volume buttons</string>
    <string name="clock_settings">Clock</string>
    <string name="clock_settings_summary">Set style, time zone and change device date and time</string>
    <string name="alarm_settings">Alarms</string>
    <string name="alarm_settings_summary">Set style, default ringtone, volume, actions to dismiss or snooze alarms, first day of the week and reminder notification time</string>
    <string name="timer_settings">Timers</string>
    <string name="timer_settings_summary">Set default ringtone, volume and timer sorting</string>
    <string name="screensaver_settings_title">Screensaver</string>
    <string name="screensaver_settings_summary">Set style, color and font of the screensaver</string>
    <string name="widgets_settings">Widgets</string>
    <string name="widgets_settings_summary">Set style, colors and font size of the widgets</string>
    <string name="permission_management_settings">Permissions management</string>
    <string name="permission_management_summary">Show the permissions necessary for the application to work properly</string>
    <string name="backup_restore_title">Backup &amp; Restore</string>
    <string name="backup_restore_summary">Backup or restore application data except custom ringtones</string>
    <string name="category_smart_home">Smart Home Integration</string>
    <string name="pref_webhook_url_title">Home Assistant Webhook URL</string>
    <string name="pref_webhook_url_summary">URL wird aufgerufen, wenn der Wecker klingelt</string>
    <string name="pref_test_webhook_title">Webhook testen</string>
    <string name="pref_test_webhook_summary">Klicken, um den Webhook jetzt auszulösen</string>
</resources>